# mars

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
docs/: CMakeLists.txt  Doxyfile.in
libmars/: CMakeLists.txt
libmars/include/mars/: exceptions.hpp  token.hpp  tokenizer.hpp
libmars/src/: tokenizer.cpp
mars/: CMakeLists.txt
mars/src/: main.cpp
tests/: CMakeLists.txt
tests/src/: test.cpp
